--- a/src/main/resources/static/css/insert.css
+++ b/src/main/resources/static/css/insert.css
@@ -6,9 +6,22 @@
 	margin-left: 30px;
 	margin-right: 30px;
 }
-.titleinsert{
+
+#btnproductNameSameCheck {
+	background: skyblue;
+	font-size: 16px;
+	color: black;
+}
+
+#btnproductNameSameCheck a{
+	color: white;
+	text-decoration: none;
+}
+
+
+.titleinsert {
 	font-size: 35px;
-	margin-bottom:15px;
+	margin-bottom: 15px;
 }
 
 #btnInsert {
